<resources>
    <string name="app_name">Gon Sushi</string>
    <string name="address">Load of Hay, 33 Villier Street, Uxbridge, UB8 2PU</string>
    <string name="phone_number">+44 7432 651978</string>
    <string name="opening_times">Tue-Sat\t\t17:00 - 23:00</string>
    <string name="quote">“Best fresh sushi I\'ve had in UK”</string>
    <string name="food_banner_alt">Picture of maki rolls</string>
    <string name="food_banner3_alt">Picture of noodles</string>
    <string name="business_description">Enjoy traditional Japanese and Korean food in a traditional English pub. Come in, take a seat, and maybe even read one of the many books that line the shelves while you wait for your food.</string>
</resources>
