<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.shiv379.android.gonsushi.MainActivity">

    <RelativeLayout
        android:id="@+id/title_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/title"
            android:text="@string/app_name"/>

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/rating_bar"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5" />

        <ImageView
            android:id="@+id/foodImage"
            style="@style/title_image"
            android:contentDescription="@string/food_banner_alt"
            android:src="@drawable/food_banner"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_banner"
        android:background="@color/bg_light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/business_description"
                style="@style/business_description"
                android:text="@string/business_description"
                android:textColor="@color/primary_text"/>

            <android.support.v7.widget.CardView
                android:id="@+id/place_card_view"
                style="@style/card"
                android:onClick="goSecondView">


                <TextView
                    android:id="@+id/addressLabel"
                    style="@style/card_textview"
                    android:drawableLeft="@drawable/ic_place_black_18dp"
                    android:drawableStart="@drawable/ic_place_black_18dp"
                    android:text="@string/address" />

            </android.support.v7.widget.CardView>

            <View style="@style/Divider"/>

            <android.support.v7.widget.CardView
                android:id="@+id/phone_card_view"
                style="@style/card">

                <TextView
                    android:id="@+id/phoneLabel"
                    style="@style/card_textview"
                    android:layout_height="match_parent"
                    android:autoLink="phone"
                    android:drawableLeft="@drawable/ic_phone_black_18dp"
                    android:drawableStart="@drawable/ic_phone_black_18dp"
                    android:text="@string/phone_number"/>

            </android.support.v7.widget.CardView>

            <View style="@style/Divider"/>

            <android.support.v7.widget.CardView
                android:id="@+id/opening_card_view"
                style="@style/card">

                <TextView
                    android:id="@+id/openingLabel"
                    style="@style/card_textview"
                    android:drawableLeft="@drawable/ic_access_time_black_18dp"
                    android:drawableStart="@drawable/ic_access_time_black_18dp"
                    android:text="@string/opening_times"
                    android:textColor="@color/secondary_text"/>

            </android.support.v7.widget.CardView>
            <TextView
                android:id="@+id/quote"
                style="@style/quote"
                android:text="@string/quote"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>